# davinci-samples

./: .bazeliskrc  .bazelrc  .editorconfig  .gitignore  LICENSE  MODULE.bazel  README.md
bazel-starter/: README.md  helpers.bzl
bazel-starter/com-diag/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  com-diag.MODULE.bazel
bazel-starter/com-diag/dvcfg6-project/: .editorconfig  .gitignore
bazel-starter/com-diag/dvcfg6-project/Settings/: General.json
bazel-starter/eac/: BUILD.bazel  MODULE.bazel  README.md  eac.MODULE.bazel
bazel-starter/eac/cfg6-project/: eac.dvjson
bazel-starter/eac/cfg6-project/Settings/: ArxmlProjectContent.json  General.json
bazel-starter/eac/dvcfg6-project/Output/Schema/: ArxmlProjectContent.settings.schema.json  General.settings.schema.json  Ifp.settings.schema.json
bazel-starter/eac/dvcfg6-project/Settings/: General.json  Generator.json  Misc.json
bazel-starter/eac/src/: MyFirstEAC.java  MySecondEAC.java
bazel-starter/mcal/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  mcal.MODULE.bazel
bazel-starter/mcal/cfg6-project/: .gitignore
bazel-starter/mcal/cfg6-project/Config/AUTOSAR/: PlatformTypes_AR4.arxml
bazel-starter/mcal/cfg6-project/Settings/: ArxmlProjectContent.json  General.json
bazel-starter/project-creation/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  project-creation.MODULE.bazel  project-creation.json
build-starter/: README.md
build-starter/com-diag/: com-diag.MODULE.bazel
build-starter/com-diag/dvcfg6-project/Config/EcuConfig/: ComDiag.ecuc.arxml
build-starter/com-diag/dvcfg6-project/Settings/: ArxmlProjectContent.json  General.json
build-starter/eac/: eac.MODULE.bazel
build-starter/eac/dvcfg6-project/: .gitignore
build-starter/eac/dvcfg6-project/Output/Schema/: Acknowledgements.settings.schema.json  Master.settings.schema.json  Settings.settings.schema.json
build-starter/eac/dvcfg6-project/Settings/: Ifp.json
build-starter/eac/src/: MyFirstEac.java  MySecondEac.java
build-starter/project-creation/: README.md  project-creation.MODULE.bazel
project-migration/: README.md  __MasterWorkflow.ps1  _config.ps1  diag_import.ps1  dvcfg_migration.ps1  dvdevc_migration.ps1  open_dvcfg6_gui.ps1  stop_dvcfg6_core.ps1  store_user_code_blocks.ps1  update_vtt.ps1
project-migration/misc/: derive_ecuc.ps1
project-migration/modules/: MigrationHelpers.psm1
ready-set-go-scripts/: DaVinci_WorkspaceSetup.bat  README.md
