###############################################################################
# BUILD.bazel
# Purpose: Bazel build defines the build targets.
# Author: Vector Informatik GmbH
###############################################################################

# Rules for preparing project input files.
load(
    "@rules_cfg6//:defs.bzl",
    "merged_extract",
    "replace_modules",
    "system_extract",
)

# Project specific rules.
load("@<DaVinciProject>//:defs.bzl", "generate")

# Extract an ECU from a system description.
system_extract(
    name = "<MyExtract>",
    ecu = "<EcuName>",
    sysd = "<MySystemDescription.arxml>",
)

# Merge multiple .arxml files into an ECU extract.
merged_extract(
    name = "<MyMergedExtract>",
    srcs = [
        "<MyExtract>",
        "<File.arxml>",
    ],
)

# Use this rule to import modules in 'replace mode'.
replace_modules(
    name = "<MyReplacedModule>",
    arxmls = ["<Module.arxml>"],
)

# Use this rule to generate the code.
generate(
    # Restrict the module to generate code for using the optional modules and/or excluded attributes.
    modules = [],
    excluded = [],
    # Specify the external generation steps to execute using the optional ext_steps attribute.
    ext_steps = [],
    type = "REAL", # "REAL" or "VTT"
    # Optional attributes defaulting to the values shown below.
    keep_tmp_files = False,
    skip_up_to_date_checks = False,
)
