###############################################################################
# MODULE.bazel
# Purpose: Bazel build rules for configuring ECUs using DaVinci Configurator Classic Version 6.
# Author: Vector Informatik GmbH
###############################################################################

bazel_dep(name = "rules_ecu_config", version = "1.0.0")

ecu_config = use_extension("@rules_ecu_config//:ecu_config.bzl", "ecu_config")

# DaVinci Configurator Classic Version 6 is used for ECU configuration.
# DaVinci-AUTOSAR-JSON is used for diagnostic data and variants.
# Other versions of these tools are supported as well.
# To use a different version, update <cfg6_url>, <dvarjson_url>, <dvarjson_sh256> and <cfg6_sh256>.
ecu_config.tools(
    cfg6_sha256 = "1ff6d0d3e0256853633ed3a39cfc0b86841bf6fabe0aa4544c3cf29a384a3608",
    cfg6_url = "https://packages.vehub.vector.com/nuget/flatcontainer/vector-davinci-configurator-classic-cli/6.2.1/vector-davinci-configurator-classic-cli.6.2.1.nupkg",
    dvarjson_sha256 = "e0f86cda336baf3c8bcbf39bd458e429153efcd384d388915fcee2a10605c076",
    dvarjson_url = "https://packages.vehub.vector.com/nuget/flatcontainer/vector-dvarjson/1.1.0/vector-dvarjson.1.1.0.nupkg",
)

# Define a DaVinci Project.
# For detailed instructions, see https://help.vector.com/davinci-configurator-classic/en/current.
ecu_config.project(
    # Specify EcuC-as-Code jars.
    # Provide the path to the jars.
    as_code = [
        "<MyFirstEAC>",
        "<MySecondEAC>",
    ],
    # Specify the BSW package for the DaVinci Project.
    # Provide the folder path to your BSW package here.
    bsw_pkg = "<BswPackage>",
    # Specify the creation file for the DaVinci Project.
    # Fo details how to configure your creation file, see:
    # https://marketplace.visualstudio.com/items?itemName=VectorGroup.dvcfg
    creation_file = "<ProjectCreationFile>",
    # Specify the diagnostic description for the DaVinci Project.
    # Provide the path to either a legacy Diagnostic Data Definition file or an ARXML file.
    # For details on how CDD is used in DaVinci configurator Classic Version 6, see:
    # https://marketplace.visualstudio.com/items?itemName=VectorGroup.dvarjson&ssr=false#overview
    diag_modules = [
        "<LegacyDiagnosticDataDefinitionFile.json>",
        "<DiagnosticModuleConfiguration.arxml>"
    ],
    # Provide the path to the ECU System Extract files.
    extract = [
        "<MyECU.arxml>",
        "<MyMergedExtract>",
    ],
    # Provide the path to the module configuration files.
    modules = [
        "<ModuleA.arxml>",
        "<ModuleB.arxml>",
        "<MyReplacedModule>",
    ],
)

# Import the DaVinci Project and associated tools.
# Specify the DaVinci Project name.
use_repo(ecu_config, "cfg6", "dvarjson", "<DaVinciProject>")

# Configure the required toolchains.
register_toolchains("@cfg6//:toolchain")
register_toolchains("@dvarjson//:toolchain")
