###############################################################################
# eac.MODULE.bazel
# Purpose: DaVinci Configurator Classic Version 6 project definition
# Author: Vector Informatik GmbH
###############################################################################

# Use this for using your own DaVinci project instead of the empty demo project.
# migrated_project = use_repo_rule("//bazel-starter:helpers.bzl", "migrated_project")
# migrated_project(
#     name = "<MigratedProject>",
#     dvjson = "<DvjsonFilePath>",
# )
# With the above, dvjson attribute below can be set to "@<MigratedProject>//:dvjson".

# For details on DaVinci Configurator Classic Version 6 see https://help.vector.com/davinci-configurator-classic/en/current.
ecu_config = use_extension("@rules_ecu_config//:ecu_config.bzl", "ecu_config")
ecu_config.project(
    # Provide EaC jars (see BUILD.bazel on how to define EaC Java targets).
    as_code = [
        "//bazel-starter/eac:MyFirstEac",
        "//bazel-starter/eac:MySecondEac",
    ],
    bsw_pkg = "@bsw_package//:folder",
    dvjson = "//bazel-starter/eac:cfg6-project/eac.dvjson",
    # Optionally provide diagnostic descriptions (for CDD support see https://marketplace.visualstudio.com/items?itemName=VectorGroup.dvarjson).
    # diag_modules = [
    #     "<LegacyDiagnosticDataDefinitionFile.json>",
    #     "<DiagnosticModuleConfiguration.arxml>",
    # ],
    # Optionally provide an ECU extract (see BUILD.bazel on how to create ECU extracts).
    # extract = [
    #     "<MyECU.arxml>",
    #     "<MyMergedExtract>",
    # ],
    # Optionally provide module configurations (see BUILD.bazel on how to import in 'replace mode').
    # modules = [
    #     "<ModuleA.arxml>",
    #     "<ModuleB.arxml>",
    #     "<MyReplacedModule>",
    # ],
)
# The name of the project repo is set to the name of the referenced .dvjson file.
use_repo(ecu_config, "eac")
