###############################################################################
# BUILD.bazel
# Purpose: Bazel build defines the build targets.
# Author: Vector Informatik GmbH
###############################################################################

# Rules for preparing project input files.
load("@rules_cfg6//:defs.bzl", "replace_modules")

# Project specific rules.
load("@MyProject//:defs.bzl", "generate")

exports_files(["cfg6-project/mcal.dvjson"])

# Import modules in 'replace mode'.
# replace_modules(
#     name = "<MyReplacedModule>",
#     arxmls = ["<Module.arxml>"],
# )

# Generate the code.
generate(
    name = "code",
    # Restrict the modules to generate code for using the optional modules and/or excluded attributes.
    modules = [],
    excluded = [],
    # Specify the external generation steps to execute using the optional ext_steps attribute.
    ext_steps = [],
    type = "REAL", # "REAL" or "VTT"
    # Additional optional attributes defaulting to the values shown below.
    keep_tmp_files = False,
    skip_up_to_date_checks = False,
)
