###############################################################################
# BUILD.bazel
# Purpose: Bazel build defines the build targets.
# Author: Vector Informatik GmbH
###############################################################################

# DaVinci Configurator Classic rules.
load(
    "@rules_cfg6//:defs.bzl",
    "merged_extract",
    "replace_modules",
    "system_extract",
)

###############################################################################
#                   EcuExPro
###############################################################################

# Extract the RearECU from the system description.
# Note: The Bazel rule name may differ from the actual ECU name.
# bazel build :extract_my_ecu
system_extract(
    name = "extract_rear_ecu",
    ecu = "RearECU",
    sysd = "input/sysd.arxml",
)

# Merge multiple .arxml files to generate an ECU extract.
# bazel build :merged_extract
merged_extract(
    name = "merged_extract",
    srcs = [
        ":MyECU",
        ":extract_rear_ecu",
    ],
)

###############################################################################
#                   ECU Configuration
###############################################################################

# Use this option to import modules in "replace mode".
replace_modules(
    name = "replace_can",
    arxmls = ["input/can_module.arxml"],
)
