###############################################################################
# MODULE.bazel
# Purpose: Bazel build rules for configuring ECUs using DaVinci Configurator Classic Version 6.
# Author: Vector Informatik GmbH
###############################################################################

bazel_dep(name = "rules_ecu_config", version = "1.0.0")

ecu_config = use_extension("@rules_ecu_config//:ecu_config.bzl", "ecu_config")

# DaVinci Configurator Classic Version 6 is used for ECU configuration.
# Other versions of DaVinci Configurator Classic are supported as well.
# To use a different version, update <cfg6_url> and <cfg6_sh256>.
ecu_config.tools(
    cfg6_sha256 = "90CBF7629A7F80F075CA313BC50BA5842933546AF9ACF29637ACE87DE56DD8A1",
    cfg6_url = "https://packages.vehub.vector.com/nuget/flatcontainer/vector-davinci-configurator-classic-cli/6.2.1/vector-davinci-configurator-classic-cli.6.2.1.nupkg",
)

# Define a DaVinci Project.
# For detailed instructions, see the official documentation:
# https://help.vector.com/davinci-configurator-classic/en/current/dvcfg-classic/6.2-SP0/index.html
ecu_config.project(
    # Specify the BSW package for the DaVinci Project.
    # Provide the folder path to your BSW package here.
    bsw_pkg = "<BswPackage>",
    # Specify the creation file for the DaVinci Project.
    # Fo details how to configure your creation file, see:
    # https://marketplace.visualstudio.com/items?itemName=VectorGroup.dvcfg
    creation_file = "<ProjectCreationFile>",
    # Specify the diagnostic description for the DaVinci Project.
    # Provide the path to either a legacy Diagnostic Data Definition file or an ARXML file.
    # For details on how CDD is used in DaVinci configurator Classic Version 6, see:
    # https://marketplace.visualstudio.com/items?itemName=VectorGroup.dvarjson&ssr=false#overview
    diag_modules = [
        "<LegacyDiagnosticDataDefinitionFile.json>",
        "<DiagnosticModuleConfiguration.arxml>",
    ],
    # Provide the path to the ECU System Extract files.
    extract = ["<MyECU.arxml>"],
    # Provide the path to the module configuration files.
    modules = [
        "<ModuleA.arxml>",
        "<ModuleB.arxml>",
    ],
)

# Import the DaVinci Project and associated tools.
# Specify the DaVinci Project name.
use_repo(ecu_config, "cfg6", "dvarjson", "<DaVinciProject>")

# Configure the required toolchains.
register_toolchains("@cfg6//:toolchain")

register_toolchains("@dvarjson//:toolchain")
