###############################################################################
# MODULE.bazel
# Purpose: Bazel build rules for configuring ECUs using DaVinci Configurator Classic Version 6.
# Author: Vector Informatik GmbH
###############################################################################

bazel_dep(name = "rules_ecu_config", version = "1.0.1")
bazel_dep(name = "rules_cfg6", version = "1.0.0")

ecu_config = use_extension("@rules_ecu_config//:ecu_config.bzl", "ecu_config")

# DaVinci Configurator Classic Version 6 is used for ECU configuration.
# DaVinci-AUTOSAR-JSON is used for diagnostic data and variants.
# Other versions of these tools are supported as well.
# To use a different version, update <cfg6_url>, <dvarjson_url>, <dvarjson_sh256> and <cfg6_sh256>.
ecu_config.tools(
    cfg6_sha256 = "1D676D52E4A649AFA78D8C9482730E66A94472241D54D3ADBC0F82BB25E77E82",
    cfg6_url = "https://packages.vehub.vector.com/apt/pool/generic/vector-davinci-configurator-classic/6.2.1/vector-davinci-configurator-classic-6.2.1.deb",
    dvarjson_sha256 = "38D3E30EF6092C31D2F0E37747130684DFC77C4E8E94850D0FEA326BF8B7706F",
    dvarjson_url = "https://packages.vehub.vector.com/apt/pool/generic/vector-davinci-autosar-json/1.1.0/vector-dvarjson-1.1.0-amd64.deb",
    # For Windows use:
    # cfg6_sha256 = "1FF6D0D3E0256853633ED3A39CFC0B86841BF6FABE0AA4544C3CF29A384A3608",
    # cfg6_url = "https://packages.vehub.vector.com/nuget/flatcontainer/vector-davinci-configurator-classic-cli/6.2.1/vector-davinci-configurator-classic-cli.6.2.1.nupkg",
    # dvarjson_sha256 = "E0F86CDA336BAF3C8BCBF39BD458E429153EFCD384D388915FCEE2A10605C076",
    # dvarjson_url = "https://packages.vehub.vector.com/nuget/flatcontainer/vector-dvarjson/1.1.0/vector-dvarjson.1.1.0.nupkg",
)

# Define a DaVinci Project.
# For detailed instructions, see https://help.vector.com/davinci-configurator-classic/en/current.
ecu_config.project(
    # Specify the BSW package for the DaVinci Project.
    # Provide the folder path to your BSW package here.
    bsw_pkg = "<BswPackage>",
    # Specify the creation file for the DaVinci Project.
    # Fo details how to configure your creation file, see:
    # https://marketplace.visualstudio.com/items?itemName=VectorGroup.dvcfg
    creation_file = "<ProjectCreationFile>",
    # Specify the diagnostic description for the DaVinci Project.
    # Provide the path to either a legacy Diagnostic Data Definition file or an ARXML file.
    # For details on how CDD is used in DaVinci configurator Classic Version 6, see:
    # https://marketplace.visualstudio.com/items?itemName=VectorGroup.dvarjson&ssr=false#overview
    diag_modules = [
        "<LegacyDiagnosticDataDefinitionFile.json>",
        "<DiagnosticModuleConfiguration.arxml>",
    ],
    # Provide the path to the ECU System Extract files.
    extract = [
        "<MyECU.arxml>",
        "<MyMergedExtract>",
    ],
    # Provide the path to the module configuration files.
    modules = [
        "<ModuleA.arxml>",
        "<ModuleB.arxml>",
        "<MyReplacedModule>",
    ],
)

# Import the DaVinci Project and associated tools.
# Specify the DaVinci Project name.
use_repo(ecu_config, "cfg6", "dvarjson", "<DaVinciProject>")

# Configure the required toolchains.
register_toolchains("@cfg6//:toolchain")
register_toolchains("@dvarjson//:toolchain")
